--- a/woorischool/Views/Teachers/ModalViews/TeacherHomeViewController.xib
+++ b/woorischool/Views/Teachers/ModalViews/TeacherHomeViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,9 +20,12 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TeacherHomeViewController" customModule="woorischool" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TeacherHomeViewController" customModule="우리스쿨" customModuleProvider="target">
             <connections>
+                <outlet property="classCountLabel" destination="Ki6-lp-lQk" id="elP-mJ-aBP"/>
                 <outlet property="classTableView" destination="sP7-oj-uhg" id="FFU-vj-Fr9"/>
+                <outlet property="classTableViewHeightContraint" destination="hYD-9j-xqH" id="5S3-Qs-Y7U"/>
+                <outlet property="nameLabel" destination="TFf-Qj-Xb2" id="UNj-ok-928"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -39,7 +42,7 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TFf-Qj-Xb2">
-                    <rect key="frame" x="86" y="57" width="115" height="49"/>
+                    <rect key="frame" x="86" y="58.5" width="120" height="46.5"/>
                     <string key="text">홍길동 선생님
 안녕하세요</string>
                     <fontDescription key="fontDescription" name="NanumSquareRoundR" family="NanumSquareRound" pointSize="21"/>
@@ -57,13 +60,13 @@
                     <rect key="frame" x="0.0" y="144" width="414" height="40"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="공지" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aKF-wi-KlQ">
-                            <rect key="frame" x="27" y="11.5" width="26" height="17.5"/>
+                            <rect key="frame" x="27" y="9" width="28" height="22.5"/>
                             <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="15"/>
                             <color key="textColor" name="greyishBrown"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="16a-Y2-a0f">
-                            <rect key="frame" x="76" y="12" width="34.5" height="16.5"/>
+                            <rect key="frame" x="78" y="9.5" width="36" height="21"/>
                             <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
                             <color key="textColor" name="greyishBrown"/>
                             <nil key="highlightedColor"/>
@@ -89,46 +92,64 @@
                         <constraint firstAttribute="height" constant="1" id="CFC-4p-S6c"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="juB-fM-3Q8">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gW7-4B-T9l">
                     <rect key="frame" x="0.0" y="185" width="414" height="677"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="담당 강좌 총 2개" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ki6-lp-lQk">
-                            <rect key="frame" x="20" y="20" width="112" height="20"/>
-                            <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="17"/>
-                            <color key="textColor" name="greyishBrown"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sP7-oj-uhg">
-                            <rect key="frame" x="20" y="60" width="374" height="617"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </tableView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="juB-fM-3Q8">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="565.5"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="담당 강좌 총 2개" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ki6-lp-lQk">
+                                    <rect key="frame" x="20" y="20" width="117" height="25.5"/>
+                                    <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="17"/>
+                                    <color key="textColor" name="greyishBrown"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" bouncesZoom="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sP7-oj-uhg">
+                                    <rect key="frame" x="20" y="65.5" width="374" height="500"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="500" id="hYD-9j-xqH"/>
+                                    </constraints>
+                                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </tableView>
+                            </subviews>
+                            <color key="backgroundColor" name="paleGrey"/>
+                            <constraints>
+                                <constraint firstItem="Ki6-lp-lQk" firstAttribute="top" secondItem="juB-fM-3Q8" secondAttribute="top" constant="20" id="3ps-a4-Mog"/>
+                                <constraint firstItem="sP7-oj-uhg" firstAttribute="top" secondItem="Ki6-lp-lQk" secondAttribute="bottom" constant="20" id="AdW-8B-074"/>
+                                <constraint firstAttribute="bottom" secondItem="sP7-oj-uhg" secondAttribute="bottom" id="KTg-Bw-Ozt"/>
+                                <constraint firstAttribute="trailing" secondItem="sP7-oj-uhg" secondAttribute="trailing" constant="20" id="Vla-HN-dvH"/>
+                                <constraint firstItem="sP7-oj-uhg" firstAttribute="leading" secondItem="juB-fM-3Q8" secondAttribute="leading" constant="20" id="rXH-KO-AJy"/>
+                                <constraint firstItem="Ki6-lp-lQk" firstAttribute="leading" secondItem="juB-fM-3Q8" secondAttribute="leading" constant="20" id="tBY-X5-8Ss"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" name="paleGrey"/>
                     <constraints>
-                        <constraint firstItem="Ki6-lp-lQk" firstAttribute="top" secondItem="juB-fM-3Q8" secondAttribute="top" constant="20" id="3ps-a4-Mog"/>
-                        <constraint firstItem="sP7-oj-uhg" firstAttribute="top" secondItem="Ki6-lp-lQk" secondAttribute="bottom" constant="20" id="AdW-8B-074"/>
-                        <constraint firstAttribute="bottom" secondItem="sP7-oj-uhg" secondAttribute="bottom" id="KTg-Bw-Ozt"/>
-                        <constraint firstAttribute="trailing" secondItem="sP7-oj-uhg" secondAttribute="trailing" constant="20" id="Vla-HN-dvH"/>
-                        <constraint firstItem="sP7-oj-uhg" firstAttribute="leading" secondItem="juB-fM-3Q8" secondAttribute="leading" constant="20" id="rXH-KO-AJy"/>
-                        <constraint firstItem="Ki6-lp-lQk" firstAttribute="leading" secondItem="juB-fM-3Q8" secondAttribute="leading" constant="20" id="tBY-X5-8Ss"/>
+                        <constraint firstItem="juB-fM-3Q8" firstAttribute="leading" secondItem="5zS-Vj-2WW" secondAttribute="leading" id="28b-36-Rkm"/>
+                        <constraint firstItem="juB-fM-3Q8" firstAttribute="top" secondItem="5zS-Vj-2WW" secondAttribute="top" id="4LV-kA-4Dc"/>
+                        <constraint firstItem="0vZ-gi-u3R" firstAttribute="width" secondItem="juB-fM-3Q8" secondAttribute="width" id="GgJ-Jp-cps"/>
+                        <constraint firstItem="juB-fM-3Q8" firstAttribute="bottom" secondItem="5zS-Vj-2WW" secondAttribute="bottom" id="czq-Ih-CiQ"/>
+                        <constraint firstItem="juB-fM-3Q8" firstAttribute="trailing" secondItem="5zS-Vj-2WW" secondAttribute="trailing" id="wuY-xn-IrB"/>
                     </constraints>
-                </view>
+                    <viewLayoutGuide key="contentLayoutGuide" id="5zS-Vj-2WW"/>
+                    <viewLayoutGuide key="frameLayoutGuide" id="0vZ-gi-u3R"/>
+                </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="juB-fM-3Q8" firstAttribute="top" secondItem="BwV-Fi-wa8" secondAttribute="bottom" id="4h5-VA-LR8"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="gW7-4B-T9l" secondAttribute="bottom" id="2XF-8X-ltZ"/>
                 <constraint firstItem="TFf-Qj-Xb2" firstAttribute="leading" secondItem="fHc-rc-JIJ" secondAttribute="trailing" constant="11" id="Aeq-fp-aOJ"/>
-                <constraint firstItem="juB-fM-3Q8" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="C0L-79-Ki6"/>
                 <constraint firstItem="fHc-rc-JIJ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="Ctg-wv-OgS"/>
                 <constraint firstItem="Zhh-fp-AoU" firstAttribute="top" secondItem="fHc-rc-JIJ" secondAttribute="bottom" constant="34" id="HPS-wE-tKo"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="juB-fM-3Q8" secondAttribute="bottom" id="Kbg-s7-4Ye"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="juB-fM-3Q8" secondAttribute="trailing" id="SXn-RL-HKW"/>
                 <constraint firstItem="Efq-Hq-Hdh" firstAttribute="top" secondItem="Zhh-fp-AoU" secondAttribute="bottom" id="Y2r-tr-I0r"/>
                 <constraint firstItem="fHc-rc-JIJ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="cHl-hi-r9e"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gW7-4B-T9l" secondAttribute="trailing" id="cmr-gT-KI3"/>
                 <constraint firstAttribute="trailing" secondItem="BwV-Fi-wa8" secondAttribute="trailing" id="e73-hk-EMv"/>
                 <constraint firstItem="Zhh-fp-AoU" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="eOZ-Gg-nPY"/>
+                <constraint firstItem="gW7-4B-T9l" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="eRk-NE-SVa"/>
                 <constraint firstItem="TFf-Qj-Xb2" firstAttribute="centerY" secondItem="fHc-rc-JIJ" secondAttribute="centerY" id="gS0-YR-RRP"/>
+                <constraint firstItem="gW7-4B-T9l" firstAttribute="top" secondItem="BwV-Fi-wa8" secondAttribute="bottom" id="gYQ-gN-r5P"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Efq-Hq-Hdh" secondAttribute="trailing" id="giT-6p-P8p"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Zhh-fp-AoU" secondAttribute="trailing" id="jcL-TV-drI"/>
                 <constraint firstItem="BwV-Fi-wa8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rxM-eN-oTf"/>
