--- a/woorischool/Views/Teachers/ModalViews/TeacherLoginViewController.xib
+++ b/woorischool/Views/Teachers/ModalViews/TeacherLoginViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -23,8 +23,10 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TeacherLoginViewController" customModule="woorischool" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TeacherLoginViewController" customModule="우리스쿨" customModuleProvider="target">
             <connections>
+                <outlet property="emailTextField" destination="hG4-D2-JtI" id="Na5-df-5Ld"/>
+                <outlet property="passwordTextField" destination="AX6-uU-NNK" id="CCm-xo-9Eu"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -47,49 +49,25 @@
                     <color key="textColor" name="greenishTeal"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HD0-j2-2mz" customClass="CustomView" customModule="woorischool" customModuleProvider="target">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HD0-j2-2mz" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
                     <rect key="frame" x="30" y="262.5" width="354" height="95"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gUc-b2-TrZ">
                             <rect key="frame" x="0.0" y="0.0" width="354" height="47"/>
                             <subviews>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="휴대폰 번호 (-없이 입력)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hG4-D2-JtI">
-                                    <rect key="frame" x="14" y="0.0" width="256" height="47"/>
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="이메일 주소" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hG4-D2-JtI">
+                                    <rect key="frame" x="14" y="0.0" width="320" height="47"/>
                                     <color key="textColor" name="greyishBrown"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="phonePad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                 </textField>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pSy-ZP-o00" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
-                                    <rect key="frame" x="277" y="7" width="70" height="33"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="70" id="bR8-uS-IWY"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
-                                    <state key="normal" title="인증하기">
-                                        <color key="titleColor" name="brownGrey"/>
-                                    </state>
-                                    <userDefinedRuntimeAttributes>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                            <real key="value" value="1"/>
-                                        </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                            <color key="value" name="veryLightPink"/>
-                                        </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="conerRadius">
-                                            <real key="value" value="3"/>
-                                        </userDefinedRuntimeAttribute>
-                                    </userDefinedRuntimeAttributes>
-                                </button>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstItem="pSy-ZP-o00" firstAttribute="top" secondItem="gUc-b2-TrZ" secondAttribute="top" constant="7" id="4AE-Ea-yXD"/>
-                                <constraint firstItem="pSy-ZP-o00" firstAttribute="leading" secondItem="hG4-D2-JtI" secondAttribute="trailing" constant="7" id="AP1-76-SvO"/>
                                 <constraint firstAttribute="bottom" secondItem="hG4-D2-JtI" secondAttribute="bottom" id="Gqb-eE-lx6"/>
-                                <constraint firstAttribute="bottom" secondItem="pSy-ZP-o00" secondAttribute="bottom" constant="7" id="QSf-i6-Nn8"/>
+                                <constraint firstAttribute="trailing" secondItem="hG4-D2-JtI" secondAttribute="trailing" constant="20" id="L9f-vC-xFQ"/>
                                 <constraint firstItem="hG4-D2-JtI" firstAttribute="leading" secondItem="gUc-b2-TrZ" secondAttribute="leading" constant="14" id="R87-Lg-ORk"/>
                                 <constraint firstItem="hG4-D2-JtI" firstAttribute="top" secondItem="gUc-b2-TrZ" secondAttribute="top" id="UZB-aG-k51"/>
-                                <constraint firstAttribute="trailing" secondItem="pSy-ZP-o00" secondAttribute="trailing" constant="7" id="f1z-rA-Bvd"/>
                                 <constraint firstAttribute="height" constant="47" id="yzj-J7-wGx"/>
                             </constraints>
                         </view>
@@ -103,11 +81,11 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ppu-zF-ld8">
                             <rect key="frame" x="0.0" y="48" width="354" height="47"/>
                             <subviews>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="인증번호 4자리" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AX6-uU-NNK">
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AX6-uU-NNK">
                                     <rect key="frame" x="14" y="0.0" width="326" height="47"/>
                                     <color key="textColor" name="greyishBrown"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" secureTextEntry="YES" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                 </textField>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -143,7 +121,7 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bYu-2T-Lkr" customClass="CustomButton" customModule="woorischool" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bYu-2T-Lkr" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
                     <rect key="frame" x="30" y="657" width="354" height="47"/>
                     <color key="backgroundColor" name="greenishTeal"/>
                     <constraints>
